﻿Subtitle Edit Changelog

3.5.17 (xth September 2020) BETA
* NEW:
   * Add new subtitle format - thx Holmgeir
   * Add shortcuts for Tools menu items Split/Append/Join - thx z3us
   * Add context menu item for "Set default fixes" in FCE
   * Cmd line convert use header from EBU STL file - thx malashin
   * Add "ocrengine" parameter to cmd line convert
   * Add "Export to FCP+image" in OCR window - thx Marko
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Hungarian translation - thx Zityi
   * Update Finnish translation - thx Teijo S
   * Update Polish spell check dictionary - thx borifax
   * Improve support for transport stream in "cmd line convert"
   * Improve support for transport stream in "Batch convert"
   * Improve reading of badly formatted srt files - thx Gordon
   * Show warning when saving DCinema formats in non-utf-8
* FIXED:
   * Fix for overlap in "Tools -> Adjust durations" - thx Christian
   * Fix some shortcuts being written to text box - thx rebawest
   * Fix "Import plain text" for small resolutions - thx doquan0
   * Fix syntax coloring after replace - thx OmrSi
   * Fix minor label issue at startup - thx Bill
   * Keep bookmarks after edit in source view - thx Ingo
   * Fix crash on very very long text lines
   * Fix bug in export multi-line-bold/box-for-each-line - thx thehulk
   * Fix bug in export text with font-size - thx thehulk
   * Fix shortcut validation for a few menu items - thx LiMa79#4271
   * Fix web color to hex color in DCinema - thx Antonio
   * Ignore comments (NOTE) in VTT - thx Issity 


3.5.16 (16th June 2020)
* NEW:
   * OCR method "nOCR" (vector based with auto training) - thx Janusz
   * Enable custom color for waveform cursor
   * New shortcuts to move start/end one frame
   * New shortcuts to move start/end with gap - thx matmaggi/Fhining/btsix
   * Add move shortcuts to waveform (arrow left/right) - thx Shaddy
   * Add shortcut for "add waveform" - thx Bill